--- a/src/app/draftdetail/simulation/simulation.component.scss
+++ b/src/app/draftdetail/simulation/simulation.component.scss
@@ -1,12 +1,5 @@
-#simulation_container{
-
-    width: 100%;
-    height: 100%;
-    min-height: 400px;
-    display: block;
 
 
-}
 
 .toggle{
     display: flex;
